--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start:dev": "vite --port 8080",
     "build": "npm run type-check && npm run clean && npm run build:prod",
     "build:prod": "vite build",
+    "build:dev": "vite build --mode development",
+    "deploy": "gh-pages -d dist",
     "type-check": "tsc --noEmit --preserveWatchOutput",
     "type-check:watch": "npm run type-check -- --watch",
     "clean": "rimraf dist",
@@ -41,6 +43,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
+    "gh-pages": "^6.3.0",
     "jsdom": "^24.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
