--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run Build
+        run: npm run build
 
       - name: Deploy
         run: npm run deploy
